--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <artifactId>spring-jdbc</artifactId>
             <version>RELEASE</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.github.abel533</groupId>
             <artifactId>mapper</artifactId>
             <version>2.2.0</version>
@@ -47,7 +47,15 @@
             <groupId>com.github.jsqlparser</groupId>
             <artifactId>jsqlparser</artifactId>
             <version>0.9.1</version>
+        </dependency>-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper</artifactId>
+            <!-- 建议使用最新版本,最新版本请从项目首页查找 -->
+            <version>3.4.0</version>
         </dependency>
+
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -81,6 +89,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.0.0</version>
         </dependency>
     </dependencies>
     <build>
