--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 #配置根Logger 后面是若干个Appender
-log4j.rootLogger=info,A1,R
+log4j.rootLogger=debug,A1,R
 #log4j.rootLogger=DEBUG,A1,R
 
 # ConsoleAppender 输出
@@ -9,7 +9,7 @@ log4j.appender.A1.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss,SSS} [%c]-[%p
 
 # File 输出 一天一个文件,输出路径可以定制,一般在根路径下
 log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.R.File=/sioodata/timelogs/log.log
+log4j.appender.R.File=../sql-bak/log.log
 log4j.appender.R.MaxFileSize=500KB
 log4j.appender.R.MaxBackupIndex=5
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
