--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,6 +5,9 @@ jdbc21.password=sioo58657686
 jdbc31.url=jdbc:mysql://210.5.158.31:3306/smshy?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc31.username=root
 jdbc31.password=9e0dfa7e71506f31
+jdbc35.url=jdbc:mysql://119.15.137.35:3306/smshy?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc35.username=root
+jdbc35.password=sioo58657686
 initialSize=5
 maxActive=300
 timeBetweenEvictionRunsMillis=60000
